                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 06-10-2005 fixed: when pausing playback of video wth passthrough in dvdplayer, audio would keep playing
 - 06-10-2005 added: XBMC.PlayerControl(Record) skin command. Toggles recording state. Player.IsRecording, Player.CanRecord are visibility states that tell if it is possible
 - 06-10-2005 fixed: dvdplayer would become unresponsive when displaying some stillimages.
 - 04-10-2005 changed: default interlaced handling is now none.. ie it doesn't try to do anything. changed due to the many times it starts to deinterlace when not needed.
 - 04-10-2005 fixed: clockspeed used for DreamX 1480 was somewhat of. Correct value is 1481.20000Mhz as per FriendTech info. (updated with forgotten file for mplayer)
 - 02-10-2005 fixed: my music keeps its settings.  (buttons need to reference ID 5, not 501.)
 - 02-10-2005 added: Video items found in locked bookmarks are hidden from My Videos database views (Title, Genre, Actor, Year) until the bookmark is unlocked from My Videos Files view or by Master User Mode
 - 30-09-2005 added: WA51-presets(265).zip, now default Presetpack in Milkdrop. Contains presets 20fps > faster (tested in PAL720x576)
 - 30-09-2005 added: Milkdrop - can now select different preset packs from the settings menu. (Defaults to looking in visualisations\Milkdrop for zips and folders)
 - 30-09-2005 fixed: Milkdrop - xml settings file was getting corrupted.
 - 30-09-2005 fixed: Problem reading some compressed zip files.
 - 29-09-2005 added: START on the controller or PLAY on the remote now plays media from DVD-ROM if present (home screen only)
 - 29-09-2005 fixed: subtitles in subtitles/ wouldn't work on hdd.