@@ -109,17 +109,20 @@ CStdString CMusicInfoTag::GetYear() const
   return m_dwReleaseDate.wYear > 1900 ? strReturn : "";
 }
 
+void CMusicInfoTag::SetURL(const CStdString& strURL)
+{
+  m_strURL = strURL;
+}
+
 void CMusicInfoTag::SetTitle(const CStdString& strTitle)
 {
   m_strTitle = strTitle;
   m_strTitle.TrimLeft(" ");
   m_strTitle.TrimRight(" ");
-  m_strTitle.TrimRight("\r\n");
-}
-
-void CMusicInfoTag::SetURL(const CStdString& strURL)
-{
-  m_strURL = strURL;
+  m_strTitle.TrimRight("\n");
+  m_strTitle.TrimRight("\r");
+  if (m_strTitle.IsEmpty())
+    m_strTitle = "unknown";
 }
 
 void CMusicInfoTag::SetArtist(const CStdString& strArtist)
@@ -127,7 +130,10 @@ void CMusicInfoTag::SetArtist(const CStdString& strArtist)
   m_strArtist = strArtist;
   m_strArtist.TrimLeft(" ");
   m_strArtist.TrimRight(" ");
-  m_strArtist.TrimRight("\r\n");
+  m_strArtist.TrimRight("\n");
+  m_strArtist.TrimRight("\r");
+  if (m_strArtist.IsEmpty())
+      m_strArtist = "unknown";
 }
 
 void CMusicInfoTag::SetAlbum(const CStdString& strAlbum)
@@ -135,6 +141,10 @@ void CMusicInfoTag::SetAlbum(const CStdString& strAlbum)
   m_strAlbum = strAlbum;
   m_strAlbum.TrimLeft(" ");
   m_strAlbum.TrimRight(" ");
+  m_strAlbum.TrimRight("\n");
+  m_strAlbum.TrimRight("\r");
+  if (m_strAlbum.IsEmpty())
+    m_strAlbum = "unknown";
 }
 
 void CMusicInfoTag::SetGenre(const CStdString& strGenre)
@@ -142,7 +152,10 @@ void CMusicInfoTag::SetGenre(const CStdString& strGenre)
   m_strGenre = strGenre;
   m_strGenre.TrimLeft(" ");
   m_strGenre.TrimRight(" ");
-  m_strGenre.TrimRight("\r\n");
+  m_strGenre.TrimRight("\n");
+  m_strGenre.TrimRight("\r");
+  if (m_strGenre.IsEmpty())
+    m_strGenre = "unknown";
 }
 
 void CMusicInfoTag::SetReleaseDate(SYSTEMTIME& dateTime)
